refactor: fix SonarQube code quality issues (#35, RDFA-281)