@@ -28,7 +28,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestHeader;
@@ -67,7 +66,7 @@ public class DatasetContentRESTController {
               @RequestHeader("Accept")
               String acceptHeader,
               @Parameter(description = "The name/url of the inquirer.")
-              @RequestHeader(value = "origin", required = false, defaultValue = "unknown")
+              @RequestHeader(value = HttpHeaders.ORIGIN, required = false, defaultValue = "unknown")
               String originURL,
               @Parameter(description = "The literal name of the dataset.")
               @PathVariable
@@ -76,7 +75,7 @@ public class DatasetContentRESTController {
 
         var format = getRdfFormat(acceptHeader);
 
-        var fileName = datasetName + "." + getRdfFormat(acceptHeader).getLang().getFileExtensions().get(0);
+        var fileName = datasetName + "." + getRdfFormat(acceptHeader).getLang().getFileExtensions().getFirst();
 
         var outStream = getDatasetSchemaUseCase.getDatasetSchema(datasetName, format);
         var headers = new HttpHeaders();
