@@ -31,7 +31,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestHeader;
@@ -43,7 +42,6 @@ import java.util.AbstractMap;
 import java.util.List;
 import java.util.Map;
 
-@CrossOrigin
 @RestController
 @RequestMapping("api/datasets/{datasetName}/graphs/{graphURI}/shacl/combined")
 @RequiredArgsConstructor
@@ -76,7 +74,7 @@ public class SHACLContentRestController {
             @RequestHeader("Accept")
             String acceptHeader,
             @Parameter(description = "The name/url of the inquirer.")
-            @RequestHeader(value = "origin", required = false, defaultValue = "unknown")
+            @RequestHeader(value = HttpHeaders.ORIGIN, required = false, defaultValue = "unknown")
             String originURL,
             @Parameter(description = "The literal name of the dataset.")
             @PathVariable
@@ -103,7 +101,7 @@ public class SHACLContentRestController {
         if (!extendedGraphURI.equals("default")) {
             fileName = new URI(extendedGraphURI + "-shacl").getSuffix();
         }
-        fileName += "." + format.getLang().getFileExtensions().get(0);
+        fileName += "." + format.getLang().getFileExtensions().getFirst();
 
         var headers = new HttpHeaders();
         headers.setAccessControlExposeHeaders(List.of("Content-Disposition"));
